regression-tests/test-results/gcc-13/pure2-type-and-namespace-aliases.cpp.output
pure2-type-and-namespace-aliases.cpp2:27:26: error: ‘template<class T> class myclass2’ used without template arguments
   27 |     value: int == 42;
      |                          ^
